gcc/testsuite/rust/rustc/ui/mismatched_types/issue-112036.rs
struct Foo;

impl Drop for Foo {
    fn drop(self) {} // { dg-error ".E0053." "" { target *-*-* } }
}

fn main() {}

